# Nelson_Siegel_Model

./: ARCHITECTURE.md  BEST_PRACTICES.md  README.md  pyproject.toml
binder/: requirements.txt
docs/: README.md  installation.md  notebooks.md
docs/superpowers/specs/: 2026-04-27-fast-historical-factors-design.md
scripts/: run_webapp.py
src/nelson_siegel/: __init__.py  analysis.py  data.py  model.py
src/nelson_siegel/webapp/: __init__.py  _factors_cache.py  app.py  warmup.py
src/nelson_siegel/webapp/static/css/: styles.css
src/nelson_siegel/webapp/static/js/: app.js
src/nelson_siegel/webapp/templates/: index.html
tests/: test_analysis.py  test_factors_cache.py  test_model.py  test_webapp.py
